<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/num1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chislo_odin"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/num1_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:inputType="number"/>

    <TextView
        android:id="@+id/operation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operacia"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/operation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:inputType="text" />

    <TextView
        android:id="@+id/num2_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chislo_dva"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/num2_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:inputType="number" />
    <Button
        android:id="@+id/culculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schet"/>
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/Rezultat"
        android:textStyle="bold"/>


</LinearLayout>